log
Wed 24 Apr 2024 09:23:28 PM UTC: 
 tests:  0|6
total_score: 0/70
ac48e6d
Wed 24 Apr 2024 09:25:17 PM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|6
total_score: 0/70
b17c636
Wed 24 Apr 2024 09:26:56 PM UTC: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|0
73eb3a9
Wed 24 Apr 2024 09:27:54 PM UTC: 
 hashmap.c | 13 -------------
 1 file changed, 13 deletions(-)
 tests:  0|6
total_score: 0/70
3c06e8a
Wed 24 Apr 2024 09:31:00 PM UTC: 
 hashmap.c | 14 ++------------
 1 file changed, 2 insertions(+), 12 deletions(-)
 tests:  1|5
total_score: 10/70
778993c
Wed 24 Apr 2024 09:32:17 PM UTC: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  1|5
total_score: 10/70
1771d61
Wed 24 Apr 2024 09:32:58 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 30/70
dbfc319
Wed 24 Apr 2024 09:34:27 PM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  8|3
total_score: 40/70
392ade3
Wed 24 Apr 2024 09:42:01 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  8|3
total_score: 40/70
71083a5
Wed 24 Apr 2024 09:42:41 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
ea2998d
Wed 24 Apr 2024 09:44:01 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
c6f31e6
Wed 24 Apr 2024 09:44:55 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:131:32: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
  131 |   return map->buckets[posicion],posicion;
      |                                ^
hashmap.c:131:32: error: returning ‘long int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
de6e837
Wed 24 Apr 2024 09:45:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
f8f8180
Wed 24 Apr 2024 09:45:48 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
21c83e1
Wed 24 Apr 2024 09:46:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:131:10: error: returning ‘HashMap *’ {aka ‘struct HashMap *’} from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  131 |   return map;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
e4899a9
Wed 24 Apr 2024 09:46:59 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
fa8650f
Wed 24 Apr 2024 09:48:06 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  12|2
total_score: 50/70
0e680b8
